--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
     "vite": "^2.8.4"
   },
   "devDependencies": {
-    "vite-plugin-ssr": "^0.3.64"
+    "vite-plugin-ssr": "0.4.0-beta.43"
   },
-  "type": "module"
+  "type": "module",
+  "pnpm": {
+    "overrides": {
+      "@vitejs/plugin-react": "2.0.0-beta.0",
+      "vite": "3.0.0-beta.5",
+      "vite-plugin-ssr": "0.4.0-beta.43"
+    }
+  }
 }
